@@ -3940,7 +3940,7 @@ PHP_MINIT_FUNCTION(basic)
 #ifdef ZTS
 	ts_allocate_id(&basic_globals_id, sizeof(php_basic_globals), (ts_allocate_ctor) basic_globals_ctor, (ts_allocate_dtor) basic_globals_dtor);
 #ifdef PHP_WIN32
-	ts_allocate_id(&php_win32_core_globals_id, sizeof(php_win32_core_globals), (ts_allocate_ctor)php_win32_core_globals_ctor, NULL);
+	ts_allocate_id(&php_win32_core_globals_id, sizeof(php_win32_core_globals), (ts_allocate_ctor)php_win32_core_globals_ctor, (ts_allocate_dtor)php_win32_core_globals_dtor );
 #endif
 #else
 	basic_globals_ctor(&basic_globals TSRMLS_CC);
@@ -4065,6 +4065,9 @@ PHP_MSHUTDOWN_FUNCTION(basic)
 #endif
 #else
 	basic_globals_dtor(&basic_globals TSRMLS_CC);
+#ifdef PHP_WIN32
+	php_win32_core_globals_dtor(&the_php_win32_core_globals TSRMLS_CC);
+#endif
 #endif
 
 	php_unregister_url_stream_wrapper("php" TSRMLS_CC);
