@@ -41,9 +41,14 @@ struct _php_win32_core_globals {
 	/* time */
 	struct timeval starttime;
 	__int64			lasttime, freq;
+
+	HKEY       registry_key;
+	HANDLE     registry_event;
+	HashTable *registry_directories;
 };
 
 void php_win32_core_globals_ctor(void *vg TSRMLS_DC);
+void php_win32_core_globals_dtor(void *vg TSRMLS_DC);
 PHP_RSHUTDOWN_FUNCTION(win32_core_globals);
 
 #endif
