@@ -5,6 +5,9 @@ PHP                                                                        NEWS
   . removed unnecessary checks for ISREG file and corresponding stat() calls
   . opendir() is reimplemented using GetFistFile/GetNextFile those are faster
     then _findfirst/_findnext
+  . implemented registry cache that prevent registry lookup on each request.
+    In case of modification of corresponding registry-tree PHP will reload
+    it automatic
 - Zend Memory Manager Improvements (Dmitry)
   . use HeapAlloc() instead of VirtualAlloc()
   . use "win32" storage manager (instead of "malloc") on Windows by default
